--- a/tercer_examen/examen.Rmd
+++ b/tercer_examen/examen.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Análisis de las condiciones del océano frente a Perú durante mi primer año de vida"
-author: "Su nombre"
+title: "Análisis de las condiciones del océano frente a Perú durante mi nacimiento"
+author: "Rafael Varas Malca"
 output: html_document
 ---
 
@@ -9,6 +9,18 @@ output: html_document
 ## Materiales y métodos
 
 ## Resultados y discusión
+
+```{r}
+library(ncdf4)
+library(fields)
+library(kali)
+nc = nc_open("datos/sst.nc4")
+sst = ncvar_get(nc, "to")
+lat = ncvar_get(nc, "latitude")
+lon = ncvar_get(nc, "longitude") - 360
+image.map(lon, lat, sst[,,1])
+```
+
 
 ## Conclusiones
 
